# Instagram_analyzer

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  2025-07-15-this-session-is-being-continued-from-a-previous-co.txt  2025-07-18-session.txt  2025-07-18-session2-claude.txt  =2.3.5  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DAILY_PROGRESS_2025-07-17.md  DEVELOPMENT_GUIDELINES.md  MIGRATION_REPORT.md  ML_INTEGRATION.md  Makefile  README.md  README_ES.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  SECURITY.md  TODO.md  VISUAL_IMPROVEMENTS_SUMMARY.md  codex_branches.txt  conversation_commands.md  generate_complete_html_analysis.py  keywords.txt  prueba_exportador_completo.py  pyproject.toml  regenerar_reporte.py  test_chart_js.py  test_conversations.py  test_conversations_simple.py  test_enhanced_extractor.py  test_simple_extractor.py
.AI_sessions/: 2025-07-19-realiza-las-siguientes-tareas-1-reemplazar-asser.txt
.devcontainer/: Dockerfile  README-CLEAN-SETUP.md  README-EDGE-SETUP.md  cleanup-browser-scripts.sh  demo.sh  install-python-tools.sh  post-create.sh  setup.sh  view-analysis.sh  view-html.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/scripts/: aggregate-results.js  wait-for-agents.js
.github/workflows/: ai-documentation-agent.yml  ai-feature-agent.yml  ai-optimization-agent.yml  ai-orchestrator.yml  ai-review-agent.yml  ai-security-agent.yml  ai-testing-agent.yml  ci.yml  codeql.yml  dependency-review.yml  main-workflow.yml.updated  ml-pipeline-docs.yml  redirect-to-main.yml  release.yml
backup/instagram_analyzer_old/models/: __init__.py
backup/sessions/: 2025-07-15-this-session-is-being-continued-from-a-previous-co.txt  2025-07-16-this-session-is-being-continued-from-a-previous-co.txt
backup/tests/integration/: test_instagram_analyzer.py
backup/tests/unit/: test_analyzers.py  test_html_exporter_template.py  test_json_parser.py  test_models.py
config/: .flake8  .pre-commit-config.yaml  config.yaml  pytest.ini
docs/: CONSOLIDATED_WORKFLOW.md  HTML_VISUALIZATION.md  MIGRATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_PLAN.md  WORKFLOW.md  devcontainer.md  github-actions.md
docs/source/: cli_examples.rst  developer_experience.rst  formats_supported.rst  usage_examples.rst
docs/source/source/: conf.py  index.rst
docs/source/tutorials/: primeros_pasos.rst
enhanced_analysis/: instagram_analysis.html
examples/: analisis_completo.py  analisis_personalizado.py  compact_export_example.py  demo_config_usage.py  generate_complete_html_analysis.py  generate_full_analysis.py  keywords.txt  prueba_exportador_datos_reales.py  regenerar_reporte.py
final_analysis/: instagram_analysis.html
fixed_analysis/: instagram_analysis.html
instagram_analysis/: instagram_analysis.html
instagram_analyzer/: __init__.py  cli.py  exceptions.py  logging_config.py
instagram_analyzer/analyzers/: __init__.py  basic_stats.py  conversation_analyzer.py  network_analysis.py  temporal_analysis.py
instagram_analyzer/cache/: __init__.py  cache_config.py  cache_decorators.py  cache_manager.py  disk_cache.py  memory_cache.py
instagram_analyzer/core/: __init__.py  analyzer.py
instagram_analyzer/exporters/: __init__.py  html_exporter.py  pdf_exporter.py
instagram_analyzer/extractors/: __init__.py  conversation_extractor.py
instagram_analyzer/models/: __init__.py  base.py  conversation.py  interaction.py  media.py  post.py  user.py
instagram_analyzer/parsers/: __init__.py  conversation_parser.py  data_detector.py  engagement_parser.py  json_parser.py
instagram_analyzer/templates/: report.html
instagram_analyzer/utils/: __init__.py  date_utils.py  file_utils.py  image_utils.py  privacy_utils.py  retry_utils.py  text_utils.py
reporte_datos_reales_output/: instagram_analisis_datos_reales.html  instagram_analisis_datos_reales_v2.html  instagram_analysis.html
scripts/: git-automation.py  merge_branches.sh  setup-git-automation.sh  test_real_system.py  validate-workflow.py
scripts/git-hooks/: prepare-commit-msg
scripts/tools/: db_analyzer.py
source/source/: conf.py  index.rst
src/instagram_analyzer/: __init__.py  cli.py  exceptions.py  logging_config.py
src/instagram_analyzer/analyzers/: __init__.py  basic_stats.py  conversation_analyzer.py  network_analysis.py  temporal_analysis.py
src/instagram_analyzer/api/: __init__.py
src/instagram_analyzer/cache/: __init__.py  cache_config.py  cache_decorators.py  cache_manager.py  disk_cache.py  disk_cache_fix.py  memory_cache.py
src/instagram_analyzer/config/: config_loader.py
src/instagram_analyzer/core/: __init__.py  analyzer.py
src/instagram_analyzer/exporters/: __init__.py  html_exporter.py  html_exporter.py.bak  pdf_exporter.py
src/instagram_analyzer/extractors/: __init__.py  conversation_extractor.py  conversation_extractor.py.bak
src/instagram_analyzer/mcp/: __init__.py  client.py  filesystem.py  redis_adapter.py
src/instagram_analyzer/ml/: __init__.py  config.py  pipeline.py
src/instagram_analyzer/models/: __init__.py  base.py  conversation.py  interaction.py  media.py  post.py  user.py
src/instagram_analyzer/parsers/: __init__.py  conversation_parser.py  data_detector.py  engagement_parser.py  json_parser.py  (+1 more)
test_analysis/: instagram_analysis.html
test_output/: instagram_analysis.html
tests/: __init__.py  test_ci_validation.py  test_conversations.py  test_conversations_simple.py  test_enhanced_extractor.py  test_quick.py  test_simple_extractor.py
tests/integration/: test_instagram_analyzer.py
tests/unit/: prueba_exportador_completo.py  test_analyzers.py  test_chart_js.py  test_exceptions.py  test_exportador_real.py  test_exporters.py  test_html_exporter.py  test_html_exporter_template.py  test_html_report.py  test_injection.py  test_json_parser.py  test_logging_system.py  test_models.py  test_network_analyzer.py  test_pdf_exporter.py  test_simple_exporter.py  test_utils.py
tools/: conversation_commands.md
(+42 files in other folders)
