[tool.poetry]
name = "instagram-analyzer"
version = "0.1.0"
description = "Advanced Instagram data analysis tool for processing exported data"
authors = ["Instagram Analyzer Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "instagram_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
pandas = "^2.1.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"
pydantic = "^2.0.0"
python-dateutil = "^2.8.0"
tqdm = "^4.65.0"
rich = "^13.4.0"
textblob = "^0.17.0"
wordcloud = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
instagram-analyzer = "instagram_analyzer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true